Fix album name placeholders not being truncated to available space
For the album names not within the view port, we use a simpler HTML element
to save resources. This element may be briefly visible on the screen when
scrolling fast on a large library. After the previous commit 4f1cd4a2, the
placeholder was not properly truncated to fit the available space and could
overlap other elements.

--- a/css/style.css
+++ b/css/style.css
@@ -113,6 +113,7 @@ h2 span:hover .play {
 	line-height: 30px;
 	padding-bottom: 21px;
 	white-space: nowrap;
+	overflow: hidden;
 }
 
 .album-area > h2 > span {
